<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:constraint_referenced_tags="."
    tools:context=".home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="@color/strong_blue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub1"
            android:textColor="@color/sunny_color"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub2"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub3"
            android:textColor="@color/sunny_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub4"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/homeDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_description"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:constraint_referenced_tags="@string/home_description" />

        <TextView
            android:id="@+id/sunDescription"
            android:layout_width="16dp"
            android:layout_height="19dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="5dp"
            android:text="@string/title_home_sub3"
            android:textColor="@color/sunny_color" />

        <TextView
            android:id="@+id/homeRealized"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home_realize_by"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="10sp"
            android:paddingEnd="0sp">

            <TextView
                android:id="@+id/armel_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/armel_name"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/armel_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/armel_surname"
                android:textColor="@color/strong_blue"
                android:textSize="17sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/leo_name"
                android:layout_width="186dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/leo_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/leo_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/leo_surname"
                android:textColor="@color/strong_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/hugo_name"
                android:layout_width="336dp"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/hugo_name"
                android:textColor="@color/black"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/hugo_surname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/hugo_surname"
                android:textColor="@color/strong_blue"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="191dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/content_description"
                android:layout_width="241dp"
                android:layout_height="54dp"
                android:layout_marginEnd="84dp"
                android:text="@string/home_description_content"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.497" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="58dp"
                android:layout_height="59dp"
                android:layout_marginStart="96dp"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="12dp"
                android:layout_weight="1"
                android:contentDescription="@string/api_logo"
                android:src="@drawable/logo_mc"
                app:layout_constraintBottom_toBottomOf="@+id/api_explain"
                app:layout_constraintEnd_toStartOf="@+id/api_explain"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/api_explain"
                android:layout_width="0dp"
                android:layout_height="87dp"
                android:layout_marginEnd="89dp"
                android:layout_marginBottom="82dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/api_explain"
                android:textColor="@color/black"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>