<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:constraint_referenced_tags="."
    tools:context=".search.SearchFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="91dp"
        android:background="@color/strong_blue"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="54dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub1"
            android:textColor="@color/sunny_color"
            android:textSize="40sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub2"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub3"
            android:textColor="@color/sunny_color"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="bottom"
            android:text="@string/title_home_sub4"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="11dp" />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/searchAdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="18dp"
            android:layout_marginTop="176dp"
            android:layout_marginEnd="2dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSearch"
            app:layout_constraintHorizontal_bias="0.169"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rechercher"
            app:layout_constraintBaseline_toBaselineOf="@+id/searchAdress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/searchAdress" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>